--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,12 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: #ffffff;
+}
+
+/* custom container abersoft  */
+@layer components {
+  .container {
+    @apply lg:max-w-[1024px] xl:max-w-[1024px];
+  }
 }
