--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,6 @@ body {
 /* custom container abersoft  */
 @layer components {
   .container {
-    @apply lg:max-w-[1024px] xl:max-w-[1024px];
+    @apply md:max-w-[1024px] xl:max-w-[1024px];
   }
 }
